--- a/community.parent/community.common.api/pom.xml
+++ b/community.parent/community.common.api/pom.xml
@@ -12,8 +12,6 @@
     <artifactId>community.common.api</artifactId>
 
     <dependencies>
-
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -29,6 +27,11 @@
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
             <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-websocket</artifactId>
+            <version>5.2.4.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
