--- a/community.parent/community.user/pom.xml
+++ b/community.parent/community.user/pom.xml
@@ -38,6 +38,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <artifactId>community.common.api</artifactId>
+            <groupId>com.zb</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>nl.bitwalker</groupId>
             <artifactId>UserAgentUtils</artifactId>
             <version>1.2.4</version>
